--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <title>Mini Message Board</title>
 </head>
-<body>
-  <h1><%= title %></h1>
 
-  <h2>New Message</h1>
-  <form method="POST" action="/">
-    <label for="user">User:</label>
-    <input type="text" id="user" name="user" required><br>
-    <label for="text">Message:</label>
-    <input type="text" id="text" name="text" required><br>
-    <button type="submit">Submit</button>
-  </form>
-   
-  <% messages.forEach( message => { %>
-    <div>
-      <%= message.added %>
+<body class="flex justify-center">
+  <div class="w-4/6">
+    <h1
+      class="text-center mb-4 text-2xl font-bold leading-none tracking-tight text-gray-900 md:text-3xl lg:text-4xl dark:text-white">
+      Mini Message Board</h1>
+    <p class="text-center mb-6 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">Let
+      the world hear your voice.</p>
+    <div class="flex gap-4">
+      <div class="w-1/4">
+        <h2 class="text-xl font-extrabold dark:text-white">Add a Message</h2>
+        <form class="form" method="POST" action="/">
+          <label for="user" class="block mt-2 mb-2 text-sm font-medium text-gray-900 dark:text-white">Username</label>
+          <div class="flex">
+            <span
+              class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border border-r-0 border-gray-300 rounded-l-md dark:bg-gray-600 dark:text-gray-400 dark:border-gray-600">
+              <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path
+                  d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0Zm0 5a3 3 0 1 1 0 6 3 3 0 0 1 0-6Zm0 13a8.949 8.949 0 0 1-4.951-1.488A3.987 3.987 0 0 1 9 13h2a3.987 3.987 0 0 1 3.951 3.512A8.949 8.949 0 0 1 10 18Z" />
+              </svg>
+            </span>
+            <input type="text" id="user" name="user" required
+              class="rounded-none rounded-r-lg bg-gray-50 border text-gray-900 focus:ring-blue-500 focus:border-blue-500 block flex-1 min-w-0 w-full text-sm border-gray-300 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              placeholder="elonmusk">
+          </div>
+          <div class="mb-6">
+
+            <label for="text" class="block mt-2 mb-2 text-sm font-medium text-gray-900 dark:text-white">Your message</label>
+            <textarea id="text" name="text" rows="4"
+              class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              placeholder="Write your thoughts here..."></textarea>
+
+          </div>
+          <button type="submit"
+            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Submit</button>
+        </form>
+      </div>
+      <div class="w-3/4">
+        <% messages.forEach( message=> { %>
+          <a href="#" class="block  p-4 m-2 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+            <div>
+              <%= message.added.toISOString()  %>
+            </div>
+            <h5 class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white"><%= message.user %></h5>
+            <p class="font-normal text-gray-700 dark:text-gray-400"> <%= message.text %></p>
+        </a>
+
+          <% }); %>
+      </div>
     </div>
-    <%= message.user %>
-    <%= message.text %>
-  <% }); %>
+  </div>
 </body>
+
 </html>
